--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BCI - Simulador de Rebalanceo: B. Versluys R.</title>
+    <title>BCI - Simulador de Rebalanceo: Cliente1</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 
@@ -1141,4 +1141,5 @@
         }
     </script>
 </body>
+
 </html>
